--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'application'
 
+
+
 // In this section you declare where to find the dependencies of your project
 repositories {
 
@@ -20,7 +22,26 @@ repositories {
 	}
 }
 
+
+
+configurations {
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
+
+
 dependencies {
-	compile 'org.seleniumhq.selenium:selenium-java:3.4.0'
+	compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
+	extraLibs 'org.seleniumhq.selenium:selenium-java:3.14.0'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.swellrt.test.PadWriterMain'
+    }
+    from {
+        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    
 }
 
